# stocks-analytics-2025

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  run_pipeline.yml
docker/: Dockerfile
notebooks/: 01_eda_features.ipynb  02_modeling.ipynb  03_trading_strategy.ipynb
ops/: cron.example
reports/: backtest_results.md  eda_summary.md  features_catalog.md  modeling_report.md
scripts/: run_local.sh  train_trees.py  train_xgb.p
src/: __init__.py  config.py
src/app/: __init__.py  predict_daily.py  run_all.py  run_daily_pipeline.py
src/backtest/: __init__.py  exact_simulator.py  metrics.py  simulator.py  vector_backtester.py
src/brokers/: alpaca_client.py
src/data/: __init__.py  alt_provider.py  bulk_ingest.py  ingest.py
src/eda/: eda_report.py
src/features/: __init__.py  assemble_dataset.py  build_features.py
src/models/: __init__.py  advanced.py  baselines.py  train.py  xgb.py
src/notify/: __init__.py  email_report.py  telegram_bot.py
src/reports/: make_report.py
src/strategy/: __init__.py  generate_signals.py  generate_signals_2.py
src/utils/: __init__.py  io.py
tests/: test_backtest.py  test_backtest_vector.py  test_features.py  test_io.py  test_signals.py
