[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks-analytics-zoomcamp-2025"
version = "0.2.0"
description = "Projeto educacional do Stock Market Analytics Zoomcamp 2025"
authors = [
    { name = "Nath", email = "your_email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    "seaborn>=0.13.0",
    "yfinance>=0.2.36",
    "ta>=0.11.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.1",
    "sqlalchemy>=2.0.29",
    "python-dotenv>=1.0.1",
    "typer>=0.9.0",
    "pydantic>=2.6.0",
    "quantstats>=0.0.62",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",            # Boosting (reg/cls)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "pre-commit>=3.6.0"
]
deep = [
    "tensorflow>=2.17.0"         # Para LSTM (opcional)
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "C90"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
